--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ pubspec.lock
 
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
-doc/api/
+doc
 
 # Avoid committing generated Javascript files:
 *.dart.js
@@ -19,4 +19,7 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
+
+# vscode files and folders
 *.code-workspace
+.vscode
