--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,16 @@
 name: lazy_memo
 
-description: Helper classes for defining lazy variables
-  and memoized functions.
+description: Helper classes for defining lazy variables and memoized functions.
 
-version: 0.1.0-nullsafety
+version: 0.1.0
 
 homepage: https://github.com/simphotonics/lazy_memo
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies: null
 
 dev_dependencies:
-  minimal_test: ^2.0.0-nullsafety
-  pedantic: ^1.9.2
+  pedantic: ^1.11.0
+  test: ^1.16.7
