Added manual trigger.

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -10,10 +10,13 @@ on:
     branches: [ main ]
     paths:
     - '**.dart'
+
   pull_request:
     branches: [ main ]
     paths:
     - '**.dart'
+
+  workflow_dispatch:
 
 jobs:
   build:
