--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,15 +2,13 @@ name: lazy_memo
 
 description: Helper classes for defining lazy variables and memoized functions.
 
-version: 0.1.2
+version: 0.1.3
 
 homepage: https://github.com/simphotonics/lazy_memo
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-
-dependencies: null
+  sdk: '>=2.19.0 <3.0.0'
 
 dev_dependencies:
-  pedantic: ^1.11.0
-  test: ^1.16.8
+  lints: ^2.0.1
+  test: ^1.23.1
