--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: lazy_memo
 
-description: Helper classes for defining memoized functions and
-  lazy variables that can be marked for re-initialization.
-  
-version: 0.1.4
+description: Lazy variables that can be marked for re-initialization and
+  memoized single and double argument functions.
+
+version: 0.1.5
 
 homepage: https://github.com/simphotonics/lazy_memo
 
@@ -12,4 +12,4 @@ environment:
 
 dev_dependencies:
   lints: ^2.0.1
-  test: ^1.23.1
+  test: ^1.24.0
