--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,14 @@ name: lazy_memo
 description: Lazy variables that can be marked for re-initialization and
   memoized single and double argument functions.
 
-version: 0.1.8
+version: 0.1.9
 
 homepage: https://github.com/simphotonics/lazy_memo
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: '^3.0.0'
 
 dev_dependencies:
-  lints: ^2.0.1
-  test: ^1.24.0
+  benchmark_harness: ^2.2.2
+  lints: ^2.1.1
+  test: ^1.24.4
